# BdGEN

./: .env.sample  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  bdgen.sample.json  package-lock.json  pyproject.toml  zap.yaml
bdgen/: .coverage  .env.sample  bdgen-server.spec  bdgen.owasp.json  bdgen.sample.json  cli.py  compose.py  feedback.py  image_rules.py  main.py  models.py  progress.py  pyproject.toml  references.py  script.py  service.py  style_from_image.py  upscale.py  wireframes.py  wizard.py
bdgen/bdgen/: cli.py  compose.py  document_text.py  models.py  pdf_export.py  progress.py  quick_create.py  references.py  script.py  secret_store.py  service.py  stats.py  style_from_image.py  trace.py  upscale.py  versioning.py  wizard.py  xai_images.py
bdgen/bdgen/server/: __init__.py  __main__.py  app.py  error_messages.py  jobs.py
bdgen/desktop/: eslint.config.js  main.js  package-lock.json  package.json  preload.js
bdgen/server/: __main__.py  app.py  jobs.py
bdgen/tests/: conftest.py  factories.py  test_anthropic_rate_limit.py  test_app_basic.py  test_app_jobs.py  test_app_projects.py  test_config_sync_removals.py  test_document_text.py  test_duplicate_references.py  test_error_messages.py  test_feedback.py  test_generation_options_sync.py  test_image_rules.py  test_manual_script_edit.py  test_models.py  test_progress.py  test_quick_create.py  test_references_xai_prompt.py  test_secret_store.py  test_stats.py  test_upscale.py
bdgen/web/: .prettierignore  eslint.config.js  package-lock.json  package.json  vite.config.js
bdgen/web/src/: App.jsx  (+6 more)
(+136 files in other folders)
