[project]
name = "bdgen"
version = "0.1.0"
description = "Generate comic books from JSON definitions using generative AI."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "openai>=2.0",
    "anthropic>=0.50.0",
    "pillow>=10.0",
    "replicate>=1.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "cryptography>=42.0",
    "pyinstaller>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "code-review-graph>=2.3.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    "bdgen/server/static",
]

[tool.ruff.lint]
# Start with critical checks so linting is usable immediately on the existing codebase.
# Broaden this list once the current style debt has been cleaned up.
select = ["E9", "F63", "F7", "F82"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
